--- a/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
+++ b/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>MainWindow</class>
- <widget class="QMainWindow" name="MainWindow">
+ <class>CartWindow</class>
+ <widget class="QMainWindow" name="CartWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -17,31 +17,20 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>60</x>
-      <y>70</y>
-      <width>401</width>
-      <height>261</height>
+      <x>20</x>
+      <y>20</y>
+      <width>451</width>
+      <height>331</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
-      <widget class="QTableWidget" name="tableWidget">
-       <column>
-        <property name="text">
-         <string>Item</string>
-        </property>
-       </column>
-       <column>
-        <property name="text">
-         <string>Price</string>
-        </property>
-       </column>
-      </widget>
+      <widget class="QTableWidget" name="tableWidget"/>
      </item>
      <item>
       <layout class="QHBoxLayout" name="horizontalLayout">
        <item>
-        <widget class="QPushButton" name="deleteButton">
+        <widget class="QPushButton" name="Button_Delete">
          <property name="text">
           <string>Delete</string>
          </property>
@@ -61,7 +50,7 @@
         </spacer>
        </item>
        <item>
-        <widget class="QPushButton" name="checkoutButton">
+        <widget class="QPushButton" name="Button_Checkout">
          <property name="text">
           <string>Checkout</string>
          </property>
