--- a/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
+++ b/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
@@ -48,17 +48,7 @@
         </widget>
        </item>
        <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
+        <widget class="QLineEdit" name="lineSavings"/>
        </item>
        <item>
         <widget class="QPushButton" name="Button_Checkout">
