add groups to cart now

--- a/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
+++ b/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
@@ -48,7 +48,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineSavings"/>
+        <widget class="QLabel" name="label">
+         <property name="text">
+          <string>test</string>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QPushButton" name="Button_Checkout">
@@ -68,7 +72,7 @@
      <x>0</x>
      <y>0</y>
      <width>483</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
