--- a/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
+++ b/Project02 - QT Pet Database/src/PetDatabase/cartwindow.ui
@@ -50,7 +50,10 @@
        <item>
         <widget class="QLabel" name="label">
          <property name="text">
-          <string>test</string>
+          <string/>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignCenter</set>
          </property>
         </widget>
        </item>
